# abduction

./: README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf
abduction-server/: .env  .gitignore  Cargo.toml  Dockerfile  Justfile  TODO.md  bindings.ts
abduction-server/.kamal/: secrets
abduction-server/.sqlx/: query-51ebb824516fbc06af85860d7d7754ec97eaf62bbe0b2cfbd0009ad0e33855b7.json  query-b97e3450334db54bbfb23d10612dbfa71138fcd14d8da967f14408c34c403d58.json  query-dce3294ba8502656b76922cf0ae7d79c39e583bf04bcdff5843bec91ed1c5e21.json  query-f62f4b3d5ab33106efbd63abeb4e5235b34d9adcbb371b9c895d04efdce74bfc.json  query-f82619f6aebd83400ce3c8a72908d8bdb21c27d71643b5646c4c2502c5bd244a.json
abduction-server/config/: deploy.yml
abduction-server/migrations/: 20250804090532_create_entities.down.sql  20250804090532_create_entities.up.sql  20250804090532_create_entity_mutation.up.sql  20250804133516_create-test-entity.down.sql  20250804133516_create-test-entity.up.sql  20250805131509_create_match_config.down.sql  20250805131509_create_match_config.up.sql  20250805131510_create_test_entity.down.sql  20250805131510_create_test_entity.up.sql
abduction-server/queries/: add_match_mutation.sql  get_incomplete_match_config.sql  get_match_config.sql  reduce_match_entities.sql  set_match_config.sql
abduction-server/src/: brain.rs  command.rs  entity.rs  event.rs  hex.rs  location.rs  logs.rs  main.rs  mtch.rs  player_gen.rs  tick.rs
abduction-server/src/entity/: brain.rs  manager.rs  mod.rs  motivator.rs  snapshot.rs  world.rs
(+64 files in other folders)
